// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover styles should render popover on auto 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    z-index: 30;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width:479px) {
  .circuit-0 {
    visibility: visible;
    opacity: 1;
  }
}

.circuit-7 {
  pointer-events: all;
}

.circuit-6 {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  visibility: visible;
}

@media (max-width:479px) {
  .circuit-6 {
    -webkit-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    -webkit-transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width:479px) {
  .circuit-6 {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-5 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #D23F47;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-5:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-5:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-5:focus::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-5:active {
  background-color: #E6E6E6;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<div>
  <div>
    <button
      aria-controls="popover_23"
      aria-expanded="true"
      aria-haspopup="true"
      id="trigger_22"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    class="circuit-7"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_22"
      class="circuit-6"
      id="popover_23"
      role="menu"
    >
      <button
        class="circuit-2"
        data-focus-list="21"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              clip-rule="evenodd"
              d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        Add
      </button>
      <hr
        class="circuit-3"
      />
      <button
        class="circuit-5"
        data-focus-list="21"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.2 0c-.665 0-1.243.332-1.63.815A2.707 2.707 0 004 2.5V3H1a1 1 0 000 2h1v8.9c0 .56.225 1.095.622 1.489.397.392.932.611 1.49.611h7.777c.557 0 1.092-.219 1.49-.611.396-.394.621-.929.621-1.489V5h1a1 1 0 100-2h-3v-.5c0-.6-.189-1.208-.57-1.685C11.042.332 10.464 0 9.8 0H6.2zM10 3v-.5a.715.715 0 00-.132-.436.23.23 0 00-.069-.062L9.795 2h-3.59l-.004.002a.23.23 0 00-.069.062A.715.715 0 006 2.5V3h4zM5 5H4v8.9c0 .023.01.048.029.067.02.02.05.033.082.033h7.778a.117.117 0 00.082-.033A.094.094 0 0012 13.9V5H5zm1.5 1.5a1 1 0 011 1v4a1 1 0 11-2 0v-4a1 1 0 011-1zm4 1a1 1 0 10-2 0v4a1 1 0 102 0v-4z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</div>
`;

exports[`Popover styles should render popover on bottom 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    z-index: 30;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width:479px) {
  .circuit-0 {
    visibility: visible;
    opacity: 1;
  }
}

.circuit-7 {
  pointer-events: all;
}

.circuit-6 {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  visibility: visible;
}

@media (max-width:479px) {
  .circuit-6 {
    -webkit-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    -webkit-transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width:479px) {
  .circuit-6 {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-5 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #D23F47;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-5:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-5:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-5:focus::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-5:active {
  background-color: #E6E6E6;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<div>
  <div>
    <button
      aria-controls="popover_41"
      aria-expanded="true"
      aria-haspopup="true"
      id="trigger_40"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    class="circuit-7"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_40"
      class="circuit-6"
      id="popover_41"
      role="menu"
    >
      <button
        class="circuit-2"
        data-focus-list="39"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              clip-rule="evenodd"
              d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        Add
      </button>
      <hr
        class="circuit-3"
      />
      <button
        class="circuit-5"
        data-focus-list="39"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.2 0c-.665 0-1.243.332-1.63.815A2.707 2.707 0 004 2.5V3H1a1 1 0 000 2h1v8.9c0 .56.225 1.095.622 1.489.397.392.932.611 1.49.611h7.777c.557 0 1.092-.219 1.49-.611.396-.394.621-.929.621-1.489V5h1a1 1 0 100-2h-3v-.5c0-.6-.189-1.208-.57-1.685C11.042.332 10.464 0 9.8 0H6.2zM10 3v-.5a.715.715 0 00-.132-.436.23.23 0 00-.069-.062L9.795 2h-3.59l-.004.002a.23.23 0 00-.069.062A.715.715 0 006 2.5V3h4zM5 5H4v8.9c0 .023.01.048.029.067.02.02.05.033.082.033h7.778a.117.117 0 00.082-.033A.094.094 0 0012 13.9V5H5zm1.5 1.5a1 1 0 011 1v4a1 1 0 11-2 0v-4a1 1 0 011-1zm4 1a1 1 0 10-2 0v4a1 1 0 102 0v-4z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</div>
`;

exports[`Popover styles should render popover on left 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    z-index: 30;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width:479px) {
  .circuit-0 {
    visibility: visible;
    opacity: 1;
  }
}

.circuit-7 {
  pointer-events: all;
}

.circuit-6 {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  visibility: visible;
}

@media (max-width:479px) {
  .circuit-6 {
    -webkit-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    -webkit-transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width:479px) {
  .circuit-6 {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-5 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #D23F47;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-5:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-5:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-5:focus::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-5:active {
  background-color: #E6E6E6;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<div>
  <div>
    <button
      aria-controls="popover_50"
      aria-expanded="true"
      aria-haspopup="true"
      id="trigger_49"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    class="circuit-7"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_49"
      class="circuit-6"
      id="popover_50"
      role="menu"
    >
      <button
        class="circuit-2"
        data-focus-list="48"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              clip-rule="evenodd"
              d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        Add
      </button>
      <hr
        class="circuit-3"
      />
      <button
        class="circuit-5"
        data-focus-list="48"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.2 0c-.665 0-1.243.332-1.63.815A2.707 2.707 0 004 2.5V3H1a1 1 0 000 2h1v8.9c0 .56.225 1.095.622 1.489.397.392.932.611 1.49.611h7.777c.557 0 1.092-.219 1.49-.611.396-.394.621-.929.621-1.489V5h1a1 1 0 100-2h-3v-.5c0-.6-.189-1.208-.57-1.685C11.042.332 10.464 0 9.8 0H6.2zM10 3v-.5a.715.715 0 00-.132-.436.23.23 0 00-.069-.062L9.795 2h-3.59l-.004.002a.23.23 0 00-.069.062A.715.715 0 006 2.5V3h4zM5 5H4v8.9c0 .023.01.048.029.067.02.02.05.033.082.033h7.778a.117.117 0 00.082-.033A.094.094 0 0012 13.9V5H5zm1.5 1.5a1 1 0 011 1v4a1 1 0 11-2 0v-4a1 1 0 011-1zm4 1a1 1 0 10-2 0v4a1 1 0 102 0v-4z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</div>
`;

exports[`Popover styles should render popover on right 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    z-index: 30;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width:479px) {
  .circuit-0 {
    visibility: visible;
    opacity: 1;
  }
}

.circuit-7 {
  pointer-events: all;
}

.circuit-6 {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  visibility: visible;
}

@media (max-width:479px) {
  .circuit-6 {
    -webkit-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    -webkit-transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width:479px) {
  .circuit-6 {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-5 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #D23F47;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-5:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-5:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-5:focus::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-5:active {
  background-color: #E6E6E6;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<div>
  <div>
    <button
      aria-controls="popover_59"
      aria-expanded="true"
      aria-haspopup="true"
      id="trigger_58"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    class="circuit-7"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_58"
      class="circuit-6"
      id="popover_59"
      role="menu"
    >
      <button
        class="circuit-2"
        data-focus-list="57"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              clip-rule="evenodd"
              d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        Add
      </button>
      <hr
        class="circuit-3"
      />
      <button
        class="circuit-5"
        data-focus-list="57"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.2 0c-.665 0-1.243.332-1.63.815A2.707 2.707 0 004 2.5V3H1a1 1 0 000 2h1v8.9c0 .56.225 1.095.622 1.489.397.392.932.611 1.49.611h7.777c.557 0 1.092-.219 1.49-.611.396-.394.621-.929.621-1.489V5h1a1 1 0 100-2h-3v-.5c0-.6-.189-1.208-.57-1.685C11.042.332 10.464 0 9.8 0H6.2zM10 3v-.5a.715.715 0 00-.132-.436.23.23 0 00-.069-.062L9.795 2h-3.59l-.004.002a.23.23 0 00-.069.062A.715.715 0 006 2.5V3h4zM5 5H4v8.9c0 .023.01.048.029.067.02.02.05.033.082.033h7.778a.117.117 0 00.082-.033A.094.094 0 0012 13.9V5H5zm1.5 1.5a1 1 0 011 1v4a1 1 0 11-2 0v-4a1 1 0 011-1zm4 1a1 1 0 10-2 0v4a1 1 0 102 0v-4z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</div>
`;

exports[`Popover styles should render popover on top 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    z-index: 30;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width:479px) {
  .circuit-0 {
    visibility: visible;
    opacity: 1;
  }
}

.circuit-7 {
  pointer-events: all;
}

.circuit-6 {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  visibility: visible;
}

@media (max-width:479px) {
  .circuit-6 {
    -webkit-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    -webkit-transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width:479px) {
  .circuit-6 {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-5 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #D23F47;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-5:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-5:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-5:focus::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-5:active {
  background-color: #E6E6E6;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<div>
  <div>
    <button
      aria-controls="popover_32"
      aria-expanded="true"
      aria-haspopup="true"
      id="trigger_31"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    class="circuit-7"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_31"
      class="circuit-6"
      id="popover_32"
      role="menu"
    >
      <button
        class="circuit-2"
        data-focus-list="30"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              clip-rule="evenodd"
              d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        Add
      </button>
      <hr
        class="circuit-3"
      />
      <button
        class="circuit-5"
        data-focus-list="30"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.2 0c-.665 0-1.243.332-1.63.815A2.707 2.707 0 004 2.5V3H1a1 1 0 000 2h1v8.9c0 .56.225 1.095.622 1.489.397.392.932.611 1.49.611h7.777c.557 0 1.092-.219 1.49-.611.396-.394.621-.929.621-1.489V5h1a1 1 0 100-2h-3v-.5c0-.6-.189-1.208-.57-1.685C11.042.332 10.464 0 9.8 0H6.2zM10 3v-.5a.715.715 0 00-.132-.436.23.23 0 00-.069-.062L9.795 2h-3.59l-.004.002a.23.23 0 00-.069.062A.715.715 0 006 2.5V3h4zM5 5H4v8.9c0 .023.01.048.029.067.02.02.05.033.082.033h7.778a.117.117 0 00.082-.033A.094.094 0 0012 13.9V5H5zm1.5 1.5a1 1 0 011 1v4a1 1 0 11-2 0v-4a1 1 0 011-1zm4 1a1 1 0 10-2 0v4a1 1 0 102 0v-4z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</div>
`;

exports[`Popover styles should render with closed styles 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-5 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #D23F47;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-5:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-5:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-5:focus::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-5:active {
  background-color: #E6E6E6;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    z-index: 30;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

.circuit-7 {
  pointer-events: none;
}

.circuit-6 {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
}

@media (max-width:479px) {
  .circuit-6 {
    -webkit-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    -webkit-transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

<div>
  <div>
    <button
      aria-controls="popover_14"
      aria-expanded="false"
      aria-haspopup="true"
      id="trigger_13"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    class="circuit-7"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_13"
      class="circuit-6"
      id="popover_14"
      role="menu"
    >
      <button
        class="circuit-2"
        data-focus-list="12"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              clip-rule="evenodd"
              d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        Add
      </button>
      <hr
        class="circuit-3"
      />
      <button
        class="circuit-5"
        data-focus-list="12"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.2 0c-.665 0-1.243.332-1.63.815A2.707 2.707 0 004 2.5V3H1a1 1 0 000 2h1v8.9c0 .56.225 1.095.622 1.489.397.392.932.611 1.49.611h7.777c.557 0 1.092-.219 1.49-.611.396-.394.621-.929.621-1.489V5h1a1 1 0 100-2h-3v-.5c0-.6-.189-1.208-.57-1.685C11.042.332 10.464 0 9.8 0H6.2zM10 3v-.5a.715.715 0 00-.132-.436.23.23 0 00-.069-.062L9.795 2h-3.59l-.004.002a.23.23 0 00-.069.062A.715.715 0 006 2.5V3h4zM5 5H4v8.9c0 .023.01.048.029.067.02.02.05.033.082.033h7.778a.117.117 0 00.082-.033A.094.094 0 0012 13.9V5H5zm1.5 1.5a1 1 0 011 1v4a1 1 0 11-2 0v-4a1 1 0 011-1zm4 1a1 1 0 10-2 0v4a1 1 0 102 0v-4z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</div>
`;

exports[`Popover styles should render with default styles 1`] = `
.circuit-2 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #1A1A1A;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-2:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-2:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-2:focus::-moz-focus-inner {
  border: 0;
}

.circuit-2:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-2:active {
  background-color: #E6E6E6;
}

.circuit-2:disabled,
.circuit-2[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

.circuit-1 {
  margin-right: 8px;
}

@media (max-width:479px) {
  .circuit-0 {
    position: fixed;
    z-index: 30;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(0,0,0,0.4);
    pointer-events: none;
    visibility: hidden;
    opacity: 0;
    -webkit-transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: opacity 120ms ease-in-out,visibility 120ms ease-in-out;
  }
}

@media (max-width:479px) {
  .circuit-0 {
    visibility: visible;
    opacity: 1;
  }
}

.circuit-7 {
  pointer-events: all;
}

.circuit-6 {
  box-shadow: 0 3px 8px 0 rgba(0,0,0,0.2);
  padding: 8px 0px;
  border: 1px solid #E6E6E6;
  box-sizing: border-box;
  border-radius: 8px;
  background-color: #FFF;
  visibility: hidden;
  visibility: visible;
}

@media (max-width:479px) {
  .circuit-6 {
    -webkit-transform: translateY(100%);
    -ms-transform: translateY(100%);
    transform: translateY(100%);
    -webkit-transition: -webkit-transform 120ms ease-in-out,visibility 120ms ease-in-out;
    -webkit-transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    transition: transform 120ms ease-in-out,visibility 120ms ease-in-out;
    border-bottom-right-radius: 0;
    border-bottom-left-radius: 0;
  }
}

@media (max-width:479px) {
  .circuit-6 {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    transform: translateY(0);
  }
}

.circuit-3 {
  display: block;
  width: 100%;
  border: 0;
  border-top: 1px solid #CCC;
  margin-top: 16px;
  margin-bottom: 16px;
  margin: 8px 16px;
  width: calc(100% - 16px*2);
}

.circuit-5 {
  background-color: #FFF;
  padding: 12px 32px 12px 16px;
  border: 0;
  color: #D23F47;
  -webkit-text-decoration: none;
  text-decoration: none;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  font-size: 16px;
  line-height: 24px;
}

.circuit-5:hover {
  background-color: #F5F5F5;
  cursor: pointer;
}

.circuit-5:focus {
  outline: 0;
  box-shadow: inset 0 0 0 4px #AFD0FE;
}

.circuit-5:focus::-moz-focus-inner {
  border: 0;
}

.circuit-5:focus:not(:focus-visible) {
  box-shadow: none;
}

.circuit-5:active {
  background-color: #E6E6E6;
}

.circuit-5:disabled,
.circuit-5[disabled] {
  opacity: 0.5;
  pointer-events: none;
  box-shadow: none;
}

<div>
  <div>
    <button
      aria-controls="popover_5"
      aria-expanded="true"
      aria-haspopup="true"
      id="trigger_4"
    >
      Button
    </button>
  </div>
  <div
    class="circuit-0"
  />
  <div
    class="circuit-7"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      aria-labelledby="trigger_4"
      class="circuit-6"
      id="popover_5"
      role="menu"
    >
      <button
        class="circuit-2"
        data-focus-list="3"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g>
            <path
              clip-rule="evenodd"
              d="M2 8a6 6 0 1112 0A6 6 0 012 8zm6-8a8 8 0 100 16A8 8 0 008 0zm1 5a1 1 0 10-2 0v2H5a1 1 0 100 2h2v2a1 1 0 002 0V9h2a1 1 0 100-2H9V5z"
              fill="currentColor"
              fill-rule="evenodd"
            />
          </g>
        </svg>
        Add
      </button>
      <hr
        class="circuit-3"
      />
      <button
        class="circuit-5"
        data-focus-list="3"
        role="menuitem"
      >
        <svg
          class="circuit-1"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M6.2 0c-.665 0-1.243.332-1.63.815A2.707 2.707 0 004 2.5V3H1a1 1 0 000 2h1v8.9c0 .56.225 1.095.622 1.489.397.392.932.611 1.49.611h7.777c.557 0 1.092-.219 1.49-.611.396-.394.621-.929.621-1.489V5h1a1 1 0 100-2h-3v-.5c0-.6-.189-1.208-.57-1.685C11.042.332 10.464 0 9.8 0H6.2zM10 3v-.5a.715.715 0 00-.132-.436.23.23 0 00-.069-.062L9.795 2h-3.59l-.004.002a.23.23 0 00-.069.062A.715.715 0 006 2.5V3h4zM5 5H4v8.9c0 .023.01.048.029.067.02.02.05.033.082.033h7.778a.117.117 0 00.082-.033A.094.094 0 0012 13.9V5H5zm1.5 1.5a1 1 0 011 1v4a1 1 0 11-2 0v-4a1 1 0 011-1zm4 1a1 1 0 10-2 0v4a1 1 0 102 0v-4z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        Remove
      </button>
    </div>
  </div>
</div>
`;
